feat: add goodies for 2024, simplify monthly_abo_give pricing, transactionals

--- a/packages/backend-modules/mail/templates/payment_successful_abo_give.html
+++ b/packages/backend-modules/mail/templates/payment_successful_abo_give.html
@@ -91,7 +91,11 @@
                       2022 verschickt. {{/if}}{{#if goodies_has_mug}}Republik-Tassen 
                       liefern wir Ihnen innerhalb von 10 Werktagen. {{/if}} 
                       {{#if goodies_has_cookie}} Der Versand der Republik-Guetsliformen 
-                      erfolgt bis 22. Dezember. {{/if}}{{#if goodies_has_totebag_black}}Schwarze Taschen liefern wir im April. {{/if}}
+                      erfolgt bis 22. Dezember. {{/if}}{{#if goodies_has_totebag_black}}
+                      Schwarze Taschen liefern wir im April. {{/if}}
+                      {{#if goodies_has_librarybook}} Republik-Bibliothek Taschenbüber, 
+                      die vor dem 19. Dezember bestellt wurde, werden vor Weihnachten 
+                      geliefert.{{/if}}
                     </p>
 
                     <ul
