chore(mail): adapt membership_owner_prolong_yearly_abo_winback_7 text and subject

--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice_0.html
@@ -85,7 +85,9 @@
                       Sie schaffen Raum für eine respektvolle Debatte. Und Sie leisten einen wertvollen Beitrag zur Medienvielfalt in der Schweiz. 
                       Dürfen wir Sie ein weiteres Jahr an Bord wissen?
                     </p>
-                    <p>Bei Fragen oder wenn Sie Hilfe brauchen, helfen wir Ihnen unter kontakt@republik.ch gerne weiter.</p>
+                    <p>Bei Fragen oder wenn Sie Hilfe brauchen, helfen wir Ihnen unter 
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
+                       gerne weiter.</p>
                     <p>
                       Herzlich
                     </p>
