--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
@@ -52,11 +52,11 @@
                       Ihr Abo ausgelaufen ist.
                     </p>
                     <p>
-                      Aber keine Sorge, so weit muss es nicht kommen. Sie können
-                      einfach ein neues Abonnement für das nächste Jahr (oder
-                      den nächsten Monat) abschliessen und weiter wie gewohnt
-                      die Republik lesen (oder hören):
+                      Aber keine Sorge, so weit muss es nicht kommen. 
+                      Sie können einfach eine neue Mitgliedschaft abschliessen und ein weiteres Jahr 
+                      wie gewohnt die Republik lesen (oder hören):
                     </p>
+                    <p>Weil wir uns schon kennen, offerieren wir Ihnen <b>ein Republik-Jahr für 199 statt 240 Franken</b>. Damit lesen Sie zwei Monate kostenlos.</p>
                     <table
                       width="100%"
                       border="0"
@@ -68,7 +68,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a href="{{link_offers_overview}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">An Bord bleiben</a>
+                                <a href="http://shop.republik.ch?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_7" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Abo für 199 statt 240.-</a>
                               </td>
                             </tr>
                           </table>
@@ -76,14 +76,18 @@
                       </tr>
                     </table>
                     <p>
-                      Sollten Sie noch unsicher sein oder Fragen haben, dann
-                      nehmen Sie ungeniert mit uns Kontakt auf: Schreiben Sie an
+                      Sie planen lieber kurz- als langfristig? Dann legen wir Ihnen das Monatsabo ans Herz. 
+                      <a href="https://shop.republik.ch/angebot/MONTHLY?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_7_monthly">Für 11 Franken im ersten Monat bleiben Sie weiterhin an Bord.</a>
+                    </p>
+                    <p>Sollten Sie noch unsicher sein oder Fragen haben, dann nehmen Sie ungeniert mit uns Kontakt auf: Schreiben Sie an 
                       <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
-                      oder antworten Sie direkt auf diese E-Mail.
+                       oder antworten Sie direkt auf diese E-Mail.
                     </p>
                     <p>
-                      Wir bedanken uns herzlich für das letzte Jahr, und es
-                      würde uns freuen, Sie für ein weiteres an Bord zu wissen!
+                      Die Republik gibt es, weil viele etwas dafür tun. Vielen Dank für Ihren Einsatz!
+                    </p>
+                    <p>
+                      Herzlich
                     </p>
                     <p>Ihre Crew der Republik</p>
                   </td>
