--- a/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
@@ -43,19 +43,17 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Vielleicht ist es Ihnen aufgefallen: Wir haben uns in den
-                      letzten Wochen mehrfach bei Ihnen gemeldet und Sie per
-                      E-Mail darauf hingewiesen, dass Ihr Abonnement bei der
-                      Republik bald ausläuft. Leider haben wir nichts gehört von
-                      Ihnen. Deshalb verlieren Ihre Zugangsdaten ab sofort
-                      leider ihre Gültigkeit.
+                      Vielleicht ist es Ihnen aufgefallen: 
+                      Wir haben uns in den letzten Wochen mehrfach bei Ihnen gemeldet 
+                      und Sie per E-Mail darauf hingewiesen, dass Ihr Abonnement bei der Republik bald ausläuft. 
+                      Leider haben wir nichts gehört von Ihnen. 
+                      Deshalb verlieren Ihre Zugangsdaten ab sofort ihre Gültigkeit.
                     </p>
                     <p>
-                      Alles bloss ein blödes Missverständnis? Sie haben die
-                      E-Mails schlicht übersehen, Ihr Internet war kaputt oder
-                      Sie waren mit anderen Dingen beschäftigt?
+                      Alles bloss ein blödes Missverständnis? Sie haben die E-Mails schlicht übersehen, 
+                      Ihr Internet war kaputt oder Sie waren mit anderen Dingen beschäftigt?
                     </p>
-                    <p>Kein Problem, hier entlang:</p>
+                    <p>Kein Problem, mit wenigen Klicks sind Sie wieder dabei – <b>zum Sonderpreis von 199 statt 240 Franken.</b></p>
                     <table
                       width="100%"
                       border="0"
@@ -67,7 +65,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a href="{{link_offers_overview}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
+                                <a href="http://shop.republik.ch?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_14" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
                               </td>
                             </tr>
                           </table>
@@ -75,11 +73,10 @@
                       </tr>
                     </table>
                     <p>
-                      Sollten Sie aus finanziellen Gründen zögern: Am Preis soll
-                      es nicht liegen. Journalismus kostet zwar, doch wir wollen
-                      niemanden ausschliessen. Wenn Sie einen finanziellen
-                      Engpass haben sollten, können Sie eine
-                      <a href="{{link_offer_reduced}}">Mitgliedschaft zu einem tieferen Preis abschliessen</a>.
+                      Sollten Sie aus finanziellen Gründen zögern: Am Preis soll es nicht liegen. 
+                      Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. 
+                      Wenn Sie einen finanziellen Engpass haben sollten, 
+                      können Sie eine <a href={{link_offer_reduced}}>Mitgliedschaft zu einem vergünstigten Preis abschliessen</a>.
                     </p>
                     <p>
                       Vielleicht liegt das Missverständnis auch auf unserer
@@ -88,10 +85,10 @@
                       <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>
-                      Wir würden uns freuen, Sie ein weiteres Jahr an Bord zu
-                      wissen. Und wenn Sie sich doch dagegen entscheiden, dann
-                      sehen wir uns vielleicht zu einem späteren Zeitpunkt
-                      wieder {{link_offers_overview}}.
+                      Wir würden uns freuen, Sie ein weiteres Jahr an Bord zu wissen. 
+                      Und wenn Sie sich heute doch dagegen entscheiden, 
+                      dann sehen wir uns vielleicht zu einem späteren Zeitpunkt wieder? 
+                      Sie sind jederzeit willkommen!
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
