chore(mail): replace shop url by mail template variable

--- a/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
@@ -65,7 +65,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a href="http://shop.republik.ch?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_14" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
+                                <a href="{{shop_base_url}}?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_14" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
                               </td>
                             </tr>
                           </table>
