--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice_0.html
@@ -56,7 +56,7 @@
                     </p>
                     <p>Da sich Ihr jetziges Abo nicht automatisch erneuert, müssen Sie aktiv werden. 
                       Sie haben es in der Hand: 
-                      <a href="http://shop.republik.ch?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_notice_0">Für 199 Franken statt 240 Franken</a> 
+                      <a href="{{shop_base_url}}?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_notice_0">Für 199 Franken statt 240 Franken</a> 
                       lesen und hören Sie ein weiteres Jahr 
                       lang unsere Beiträge und sorgen für eine ausgewogene Berichterstattung und eine vielfältige Medienlandschaft.</p>
                     <table
@@ -70,7 +70,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a href="http://shop.republik.ch?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_notice_0" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Abo für 199 statt 240.-</a>
+                                <a href="{{shop_base_url}}?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_notice_0" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Abo für 199 statt 240.-</a>
                               </td>
                             </tr>
                           </table>
