--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
@@ -77,7 +77,7 @@
                     </table>
                     <p>
                       Sie planen lieber kurz- als langfristig? Dann legen wir Ihnen das Monatsabo ans Herz. 
-                      <a href="https://shop.republik.ch/angebot/MONTHLY?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_7_monthly">Für 11 Franken im ersten Monat bleiben Sie weiterhin an Bord.</a>
+                      <a href="{{link_shop_monthly_subscription}}?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_7_monthly">Für 11 Franken im ersten Monat bleiben Sie weiterhin an Bord.</a>
                     </p>
                     <p>Sollten Sie noch unsicher sein oder Fragen haben, dann nehmen Sie ungeniert mit uns Kontakt auf: Schreiben Sie an 
                       <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
