--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
@@ -947,7 +947,7 @@
 												<tr>
 													<td valign="top">
 														<div>
-															<p>Ein Zurück-zur-Republik-Angebot für Sie</p>
+															<p>Kommen Sie zurück zur Republik für 160 statt 240 Franken</p>
 														</div>
 													</td>
 												</tr>
@@ -1002,16 +1002,16 @@
 							<td valign="top" id="templateBody"><!-- BEGIN MODULE: BODY CONTENT // -->
 								<p dir="ltr">Guten Tag<br>
 									<br>
-									Seit einem Monat sind Sie nicht mehr bei der Republik. Vielleicht mussten Sie umziehen, haben den Job
-									gewechselt, einen Freund mit Liebeskummer getröstet, sich ein neues Haustier zugetan oder ein
-									Kind bekommen.<br>
+									Seit über zwei Wochen sind Sie nicht mehr bei der Republik. 
+                  Vielleicht mussten Sie umziehen, haben den Job gewechselt, 
+                  ein Kind bekommen oder versucht, eine Baumnuss zu knacken.<br>
 									<br>
-									Was auch immer der Grund für Ihre Abwesenheit ist: Sie fehlen bei der Republik!<br>
+									Was auch immer der Grund für Ihre Abwesenheit ist: Sie fehlen uns!<br>
 									<br>
-									Wir würden uns freuen, Sie wieder regelmässig im und durch den Alltag begleiten zu
-									dürfen. Denn egal, was Sie gerade tun, vernünftige Informationen brauchen Sie bestimmt. Und
-									weil das keine Floskel ist und wir es ernst meinen, machen wir Ihnen heute ein
-									Zurück-zur-Republik-Angebot:
+									Wir würden uns freuen, Sie wieder regelmässig im und durch den Alltag begleiten zu dürfen. 
+                  Denn egal, was Sie gerade tun, vernünftige Informationen brauchen Sie bestimmt. 
+                  Und weil das keine Floskel ist und wir es ernst meinen, 
+                  machen wir Ihnen heute ein Zurück-zur-Republik-Angebot:
 								</p>
 								<br>
 								<!-- Button-->
@@ -1023,7 +1023,7 @@
 													<tbody>
 														<tr>
 															<td align="center" width="100%">
-																<a href="https://www.republik.ch/angebote?package=ABO&userPrice=1&price=12000&reason=Zurueck-zur-Republik-Angebot&utm_campaign=mitstreiter"><strong>Ein Jahr Republik für CHF 120</strong></a>
+																<a href="{{link_shop_yearly_subscription}}?promo_code=YEARLY160?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_16_yearly"><strong>Ein Jahr Republik für 160 statt 240 Franken</strong></a>
 															</td>
 														</tr>
 													</tbody>
@@ -1064,20 +1064,22 @@
 										<td>
 											<div id="sender_bottom">Herzlich<br>
 												<br>
-												<strong>Olivier Baumann und Lucia Herrmann</strong><br>
-												<br>
-												Für die Republik-Crew
+												<strong>Ihre Crew der Republik</strong>
 											</div>
 										</td>
 									</tr>
 									<!-- // END PREFOOTER-->
 									<tr style="border-bottom: 1px solid #DADDDC">
 										<td valign="top" id="footerContent">
-											<div><strong>PS: Falls einer der oben
-													genannten Gründe zutreffen sollte, sind hier ein paar nützliche
-													Republik-Beiträge: <a href="https://www.republik.ch/2020/09/28/sollten-sie-vater-werden-lesen-sie-diesen-beitrag">ein Survival-Guide für den Vaterschaftsurlaub</a>, 
-                          <a href="https://www.republik.ch/2024/01/16/die-politik-der-freundschaft">Freundschaft ist politisch</a> und 
-                          <a href="https://www.republik.ch/format/sommerfragebogen">unpassende Namen für Haustiere</a>.</strong><br>
+											<div><strong>PS: Falls einer der oben genannten Gründe zutreffen sollte, 
+                        sind hier ein paar nützliche Republik-Beiträge: 
+                        eine 
+                        <a href="https://republik.ch/2024/07/11/wohnkrise-der-kampf-ums-zuhause">Recherche zur Immobilienkrise in der Schweiz</a>
+                        , 
+                        <a href="https://www.republik.ch/2020/09/28/sollten-sie-vater-werden-lesen-sie-diesen-beitrag">ein Survival-Guide für den Vaterschaftsurlaub</a>
+                         und eine Anleitung zum 
+                         <a href="https://www.republik.ch/2024/12/02/kann-man-essen-wie-ich-an-der-baumnuss-verzweifelte">Nüsseknacken</a>
+                         .</strong><br>
 												<br>
 												<a href="https://www.republik.ch/" target="_blank" title="Im Web lesen"><img alt="REPUBLIK"	height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png"	style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important" width="178"></a>
 
