--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
@@ -945,7 +945,7 @@
                         <tr>
                           <td valign="top">
                             <div>
-                              <p>Jetzt zurück zur Republik</p>
+                              <p>Kommen Sie zurück zur Republik für 160 statt 240 Franken</p>
                             </div>
                           </td>
                         </tr>
@@ -1005,9 +1005,8 @@
                   Sicherheit.
                   <br>
                   <br>
-                  Weil Sie die Republik im letzten Jahr unterstützt haben und uns aktuell fehlen, machen wir Ihnen
-                  ein besonderes Angebot: Kommen Sie für nur CHF 120 zurück an Bord und lesen (oder
-                  hören) Sie die Republik für ein weiteres Jahr.
+                  Weil Sie die Republik im letzten Jahr unterstützt haben und Sie uns fehlen, 
+                  machen wir Ihnen ein besonderes Angebot: Kommen Sie für nur 160 statt 240 Franken für ein weiteres Jahr zurück an Bord.
                 </p>
                 <br>
                 <!-- Button-->
@@ -1019,7 +1018,7 @@
                           <tbody>
                             <tr>
                               <td align="center" width="100%">
-                                <a href="https://www.republik.ch/angebote?package=ABO&userPrice=1&price=12000&reason=Zurueck-zur-Republik-Angebot&utm_campaign=mitstreiter"><strong>Jetzt zurück zur Republik</strong></a>
+                                <a href="{{link_shop_yearly_subscription}}?promo_code=YEARLY160&utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_24_yearly"><strong>Ein Jahr Republik für 160 Franken</strong></a>
                               </td>
                             </tr>
                           </tbody>
@@ -1029,11 +1028,7 @@
                   </tbody>
                 </table>
 
-                <p dir="ltr">Wie Sie wissen, ist für uns jede Art von Unterstützung wertvoll, denn
-                  wir sind werbefrei und unabhängig und finanzieren uns über die Beiträge unserer
-                  Leserinnen und Leser.</p>
-
-                <p dir="ltr">Danke für Ihre Unterstützung.</p>
+                <p dir="ltr">Danke für Ihre Unterstützung und bis bald!</p>
                 <!-- END MODULE: BODY CONTENT-->
               </td>
             </tr>
@@ -1074,9 +1069,9 @@
                     <td valign="top" id="footerContent">
                       <div>PS: Falls ein längerfristig angelegter Einsatz für die
                         Republik im Moment einfach nicht das Richtige ist für Sie, dann erlauben Sie uns folgenden
-                        Hinweis zum Schluss: Sie können die Republik für CHF 22 auch monatlich abonnieren.
-                        Damit erhalten Sie Zugang zum vollen Magazin, also zu über 8000 Beiträgen. Das Abo ist
-                        jederzeit kündbar.<br>
+                        Hinweis zum Schluss: Sie können die Republik auch monatlich abonnieren – aktuell sogar für nur 
+                        <a href="{{link_shop_monthly_subscription}}?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_24_monthly">11 Franken im ersten Monat</a>
+                        . Damit erhalten Sie Zugang zum vollen Magazin, also zu über 9000 Beiträgen. Das Abo ist jederzeit kündbar.<br>
                         <br>
                         <a href="https://www.republik.ch/" target="_blank" title="Im Web lesen"><img alt="REPUBLIK" height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png" style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important" width="178"></a>
 
