--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
@@ -964,39 +964,6 @@
 							</td>
 						</tr>
 						<!-- // END PREHEADER -->
-						<!-- BEGIN HEADER // -->
-						<tr>
-							<td valign="top" id="templateHeader">
-
-								<!-- BEGIN MODULE: HEADER IMAGE // -->
-								<img width="178" height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png"
-									style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important"
-									alt="REPUBLIK">
-								<!-- // END MODULE: HEADER IMAGE -->
-								<table id="sender" style="margin-top: 48px; margin-bottom: 24px;">
-									<tr>
-										<td>
-											<img
-												src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/d3ed83e8-5839-3998-8810-4b609547c0c3.jpeg"
-												alt="" border="0"
-												style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:72px !important;height:72px !important;margin:0;max-width:100% !important"
-												width="72" height="72">
-										</td>
-										<td>
-											<img
-												src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/97ca55f6-d4d1-1990-b610-d1c539cbf117.jpeg"
-												alt="" border="0"
-												style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:72px !important;height:72px !important;margin:0;max-width:100% !important"
-												width="72" height="72">
-										</td>
-										<td id="sender" style="padding-left: 12px;"><strong>Olivier Baumann und <br>
-												Lucia Herrmann</strong><br>
-											Für die Republik-Crew</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<!-- // END HEADER -->
 						<!-- BEGIN BODY // -->
 						<tr>
 							<td valign="top" id="templateBody"><!-- BEGIN MODULE: BODY CONTENT // -->
@@ -1048,23 +1015,9 @@
 									<!-- BEGIN PREFOOTER //-->
 									<tr align="center">
 										<td>
-											<img
-												src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/d3ed83e8-5839-3998-8810-4b609547c0c3.jpeg"
-												alt="" border="0"
-												style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:80px !important;height:80px !important;margin:0;"
-												width="72" height="72">
-											<img
-												src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/97ca55f6-d4d1-1990-b610-d1c539cbf117.jpeg"
-												alt="" border="0"
-												style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:80px !important;height:80px !important;margin:0;"
-												width="72" height="72">
-										</td>
-									</tr>
-									<tr align="center">
-										<td>
 											<div id="sender_bottom">Herzlich<br>
 												<br>
-												<strong>Ihre Crew der Republik</strong>
+												Ihre Crew der Republik
 											</div>
 										</td>
 									</tr>
