chore(mail): update offer links

--- a/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
@@ -53,7 +53,9 @@
                       Alles bloss ein blödes Missverständnis? Sie haben die E-Mails schlicht übersehen, 
                       Ihr Internet war kaputt oder Sie waren mit anderen Dingen beschäftigt?
                     </p>
-                    <p>Kein Problem, mit wenigen Klicks sind Sie wieder dabei – <b>zum Sonderpreis von 199 statt 240 Franken.</b></p>
+                    <p>Kein Problem, mit wenigen Klicks sind Sie wieder dabei – 
+                      <a href="{{link_shop_yearly_subscription}}?promo_code=YEARLYABO199&utm_medium=email&utm_source=newsletter&utm_campaign=yearlyabo24&utm_content=yearly_abo_uncancelled">zum Spezialpreis von 199 statt 240 Franken.</a>
+                    </p>
                     <table
                       width="100%"
                       border="0"
@@ -65,7 +67,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a href="{{shop_base_url}}?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_14" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
+                                <a href="{{link_shop_yearly_subscription}}?promo_code=YEARLYABO199&utm_medium=email&utm_source=newsletter&utm_campaign=yearlyabo24&utm_content=yearly_abo_uncancelled" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
                               </td>
                             </tr>
                           </table>
