--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
@@ -56,7 +56,9 @@
                       Sie können einfach eine neue Mitgliedschaft abschliessen und ein weiteres Jahr 
                       wie gewohnt die Republik lesen (oder hören):
                     </p>
-                    <p>Weil wir uns schon kennen, offerieren wir Ihnen <b>ein Republik-Jahr für 199 statt 240 Franken</b>. Damit lesen Sie zwei Monate kostenlos.</p>
+                    <p>Weil wir uns schon kennen, offerieren wir Ihnen 
+                      <a href="{{link_shop_yearly_subscription}}?promo_code=YEARLYABO199&utm_medium=email&utm_source=newsletter&utm_campaign=yearlyabo24&utm_content=yearly_abo_winback_7">ein Republik-Jahr für 199 statt 240 Franken</a>
+                      . Damit lesen Sie zwei Monate kostenlos.</p>
                     <table
                       width="100%"
                       border="0"
@@ -68,7 +70,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a href="http://shop.republik.ch?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_7" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Abo für 199 statt 240.-</a>
+                                <a href="{{link_shop_yearly_subscription}}?promo_code=YEARLYABO199&utm_medium=email&utm_source=newsletter&utm_campaign=yearlyabo24&utm_content=yearly_abo_winback_7" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Abo für 199 statt 240.-</a>
                               </td>
                             </tr>
                           </table>
