chore(mail): update transactional formatting

--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
@@ -1002,6 +1002,9 @@
 
 								<p dir="ltr">Bei Fragen oder wenn wir Ihnen bei einem Anliegen weiterhelfen können, melden Sie sich
 									gerne via <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.</p>
+
+                <p>Herzlich</p>
+                <p>Ihre Crew der Republik</p>
 								<!-- END MODULE: BODY CONTENT-->
 							</td>
 						</tr>
@@ -1012,16 +1015,6 @@
 
 								<!-- BEGIN MODULE: STANDARD FOOTER // -->
 								<table border="0" cellpadding="0" cellspacing="0" width="100%">
-									<!-- BEGIN PREFOOTER //-->
-									<tr align="center">
-										<td>
-											<div id="sender_bottom">Herzlich<br>
-												<br>
-												Ihre Crew der Republik
-											</div>
-										</td>
-									</tr>
-									<!-- // END PREFOOTER-->
 									<tr style="border-bottom: 1px solid #DADDDC">
 										<td valign="top" id="footerContent">
 											<div><strong>PS: Falls einer der oben genannten Gründe zutreffen sollte, 
