--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
@@ -995,6 +995,8 @@
                 </table>
 
                 <p dir="ltr">Danke für Ihre Unterstützung und bis bald!</p>
+                <p>Herzlich</p>
+                <p>Ihre Crew der Republik</p>
                 <!-- END MODULE: BODY CONTENT-->
               </td>
             </tr>
@@ -1005,16 +1007,7 @@
 
                 <!-- BEGIN MODULE: STANDARD FOOTER // -->
                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                  <!-- BEGIN PREFOOTER //-->
-                  <tr align="center">
-                    <td>
-                      <div id="sender_bottom">Herzlich<br>
-                        <br>
-                        Ihre Crew der Republik
-                      </div>
-                    </td>
-                  </tr>
-                  <!-- // END PREFOOTER-->
+                  
                   <tr style="border-bottom: 1px solid #DADDDC">
                     <td valign="top" id="footerContent">
                       <div>PS: Falls ein längerfristig angelegter Einsatz für die
