--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
@@ -990,7 +990,7 @@
 													<tbody>
 														<tr>
 															<td align="center" width="100%">
-																<a href="{{link_shop_yearly_subscription}}?promo_code=YEARLY160?utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_16_yearly"><strong>Ein Jahr Republik für 160 statt 240 Franken</strong></a>
+																<a href="{{link_shop_yearly_subscription}}?promo_code=YEARLY160&utm_medium=email&utm_source=transactional&utm_campaign=yearly24&utm_content=yearly_abo_winback_16_yearly"><strong>Ein Jahr Republik für 160 statt 240 Franken</strong></a>
 															</td>
 														</tr>
 													</tbody>
