--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
@@ -972,7 +972,8 @@
                   <br>
                   <br>
                   Weil Sie die Republik im letzten Jahr unterstützt haben und Sie uns fehlen, 
-                  machen wir Ihnen ein besonderes Angebot: Kommen Sie für nur 160 statt 240 Franken für ein weiteres Jahr zurück an Bord.
+                  machen wir Ihnen ein besonderes Angebot: 
+                  <a href="{{link_shop_yearly_subscription}}?promo_code=YEARLY160&utm_medium=email&utm_source=newsletter&utm_campaign=yearlyabo24&utm_content=yearly_abo_winback_24">Kommen Sie für nur 160 statt 240 Franken für ein weiteres Jahr zurück an Bord.</a>
                 </p>
                 <br>
                 <!-- Button-->
