--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
@@ -95,7 +95,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>
+                  <td style="padding: 20px">
                     <p
                       style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
                     >
