--- a/packages/backend-modules/mail/templates/register_signin_code.html
+++ b/packages/backend-modules/mail/templates/register_signin_code.html
@@ -77,7 +77,7 @@
                       </tr>
                     </table>
                     <p>
-                      Die Passwort ist nur einmal gültig. Sie können
+                      Der Code ist nur einmal für eine Stunde gültig. Sie können
                       die E-Mail anschliessend löschen.
                     </p>
                     <p>
