--- a/packages/backend-modules/mail/templates/signin.html
+++ b/packages/backend-modules/mail/templates/signin.html
@@ -64,6 +64,7 @@
                         </td>
                       </tr>
                     </table>
+                    <p>Der Link ist eine Stunde gültig.</p>
                     <p>
                       Falls Sie diese Zugriffsanfrage nicht ausgelöst haben,
                       <a href="{{{LOGIN_LINK}}}&noAutoAuthorize=true">können Sie die Zugriffsaufforderung ablehnen</a>.
