--- a/packages/backend-modules/mail/templates/signin_code.html
+++ b/packages/backend-modules/mail/templates/signin_code.html
@@ -76,7 +76,7 @@
                       </tr>
                     </table>
                     <p>
-                      Das Passwort ist nur einmal gültig. Sie können
+                      Der Code ist nur einmal für eine Stunde gültig. Sie können
                       die E-Mail anschliessend löschen.
                     </p>
                     <p>
