--- a/packages/backend-modules/mail/templates/membership_owner_autopay_failed.html
+++ b/packages/backend-modules/mail/templates/membership_owner_autopay_failed.html
@@ -93,7 +93,7 @@
                       Ihre Mitgliedschaft am {{grace_end_date}} zu deaktivieren.
                     </p>
                     <p>
-                      So weit muss es nicht kommen: <a href="{{prolong_url}}"></a>Begleichen Sie den ausstehenden 
+                      So weit muss es nicht kommen: <a href="{{prolong_url}}">Begleichen Sie den ausstehenden 
                       Jahresbeitrag</a>, wenn Sie möchten, auch mit einer 
                       anderen Zahlungsart.
                     </p>
