refactor(payments): split up god class Payments
- split up the Payments god class into smaller service classes
- refactor webhook handlers into workflow classes
- remove PaymentProvider class

--- a/packages/backend-modules/mail/templates/subscription_created_benefactor_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_benefactor_subscription.html
@@ -69,8 +69,11 @@
                       {{#if discount_code}}
                       <li>{{discount_code}}: CHF –{{discount_total}}</li>
                       {{/if}}
-                      {{#if donation}}
-                      <li>Spende: CHF {{donation}}</li>
+                      {{#if recurring_donation}}
+                      <li>Jährliche Spende: CHF {{recurring_donation}}</li>
+                      {{/if}}
+                      {{#if onetime_donation}}
+                      <li>Einmalige Spende: CHF {{onetime_donation}}</li>
                       {{/if}}
                       <li>
                         <strong>Total: CHF {{total}}</strong>
