chore: freiwilliger Beitrag

--- a/packages/backend-modules/mail/templates/subscription_created_benefactor_subscription.html
+++ b/packages/backend-modules/mail/templates/subscription_created_benefactor_subscription.html
@@ -70,10 +70,10 @@
                       <li>{{discount_code}}: CHF –{{discount_total}}</li>
                       {{/if}}
                       {{#if recurring_donation}}
-                      <li>Jährliche Spende: CHF {{recurring_donation}}</li>
+                      <li>Jährlicher freiwilliger Beitrag: CHF {{recurring_donation}}</li>
                       {{/if}}
                       {{#if onetime_donation}}
-                      <li>Einmalige Spende: CHF {{onetime_donation}}</li>
+                      <li>Einmaliger freiwilliger Beitrag: CHF {{onetime_donation}}</li>
                       {{/if}}
                       <li>
                         <strong>Total: CHF {{total}}</strong>
